--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -29,18 +29,55 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{% url 'blog:blog-home'%}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'blog:blog-about'%}">About</a>
+              <a 
+                {% if '/'  == request.path %}
+                  class="nav-item nav-link active"
+                {% else %}
+                  class="nav-item nav-link"
+                {% endif %}
+               href="{% url 'blog:blog-home'%}">Home</a>
+              <a
+              {% if 'about' in request.path %}
+                class="nav-item nav-link active"
+              {% else %}
+                class="nav-item nav-link"
+              {% endif %}
+               href="{% url 'blog:blog-about'%}">About</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
 
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'profile'%}">Profile</a>
+                <a 
+                {% if 'new' in request.path %}
+                  class="nav-item nav-link active"
+                {% else %}
+                  class="nav-item nav-link"
+                {% endif %}
+                 href="{% url 'blog:create-post'%}">Add New Post</a>
+                <a 
+                {% if 'profile' in request.path %}
+                  class="nav-item nav-link active"
+                {% else %}
+                  class="nav-item nav-link"
+                {% endif %}
+                class="nav-item nav-link" href="{% url 'profile'%}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
               {% else %}
-                <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
+                <a 
+                {% if 'login' in request.path %}
+                  class="nav-item nav-link active"
+                {% else %}
+                  class="nav-item nav-link"
+                {% endif %}
+                 href="{% url 'login'%}">Login</a>
+                <a 
+                {% if 'register' in request.path %}
+                  class="nav-item nav-link active"
+                {% else %}
+                  class="nav-item nav-link"
+                {% endif %}
+                 href="{% url 'register'%}">Register</a>
               {% endif %}
 
             </div>
